fix scrollbar manage quiz

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,5 @@
 body {
+  overflow: hidden;
   padding: 0;
   margin: 0;
   -webkit-font-smoothing: antialiased;
