--- a/src/components/Admin/admin.scss
+++ b/src/components/Admin/admin.scss
@@ -12,6 +12,7 @@
       height: 40px;
     }
     .admin-main {
+      height: calc(100vh - 40px);
     }
   }
 }
